...
                        .foregroundStyle(.red)
                        .accessibilityIdentifier("cancelButton")
                }
                ToolbarItem(placement: .navigationBarTrailing) {
                    Button(addTransactionVM.isEditando ? "Salvar" : "Adicionar", action: salvar)
                        .disabled(!addTransactionVM.podeSalvar)
                        .accessibilityIdentifier("saveButton")
                }
            }
            .sheet(isPresented: $isCategoryModalPresented) {
                CategorySelectionSheet(
                    categoriaRepository: SwiftDataCategoriaRepository(context: modelContext),
                    transactionType: addTransactionVM.selectedTransactionType == 0 ? .despesa : .receita,
                    selectedSubcategoryModel: $addTransactionVM.selectedSubcategoria,
                    isPresented: $isCategoryModalPresented,
                    selectedCategoryModel: $addTransactionVM.selectedCategoria
                )
            }
            .alert("Transação Registrada!", isPresented: $showSuccessAlert) {
                Button("OK") { dismiss() }
            }
            .errorAlert($addTransactionVM.errorMessage)
        }
    }

    private func salvar() {
...
